--- a/members_signup/templates/registration/login.html
+++ b/members_signup/templates/registration/login.html
@@ -4,39 +4,56 @@
 
 {% block content %}
 <!--notification for wrong input-->
-
-{% if form.errors %}
-<div class="error-msg">
-  <div class="not-log">
-    <div class="error-not-log">
-      <p class="msg">The username or password are incorrect. Please try again.</p>
+<div class="login-register-banner">
+  <div class="login-register">
+    {% if form.errors %}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        There was an error with your form...Please try again
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
   </div>
-
-</div>
-{% endif %}
-
-<div class="login-page">
-  <div class="form-container">
-      <h1 class="login-txt"> Login Form </h1>
-      <form method="POST">
-        {% csrf_token %}
-        <div class="control">
-          <label for="text"> Username</label>
-          <input type="text" class="form-control" id="text" aria-describedby="text" name="username">
+  {% endif %}
+  
+  <section class="vh-100 gradient-custom">
+    <div class="container-login py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+          <div class="card bg-dark text-white" style="border-radius: 1rem;">
+            <div class="card-login p-5 text-center">
+              <form method="POST">
+                {% csrf_token %}
+                <div class="mb-md-5 mt-md-4 pb-5">
+    
+                  <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
+                  <p class="text-white-50 mb-5">Please enter your login and password!</p>
+    
+                  <div class="form-outline form-white mb-4">
+                    <input type="email" id="typeEmailX" class="form-control form-control-lg" />
+                    <label class="form-label" for="typeEmailX">Email</label>
+                  </div>
+    
+                  <div class="form-outline form-white mb-4">
+                    <input type="password" id="typePasswordX" class="form-control form-control-lg" />
+                    <label class="form-label" for="typePasswordX">Password</label>
+                  </div>
+                  <div class="btn-register">
+                    <button class="btn btn-secondary btn-submit">Login</button>
+                  </div>
+    
+                </div>
+              </form>
+                <div>
+                  <p class="mb-0">Don't have an account? <a href="{% url 'register' %}" class="text-white-50 fw-bold">Sign Up</a>
+                  </p>
+                </div>
+  
+            </div>
+          </div>
         </div>
-        <div class="control">
-          <label for="InputPassword1"> Password</label>
-          <input type="password" class="form-control" id="InputPassword1" name="password">
-        </div>
-        <div class="control">
-          <input type="submit" value="login">
-        </div>
-      </form>
-      <div class="link">
-        Not a User? <a href="{% url 'register' %}" >Register Now</a>
       </div>
-  </div>
+    </div>
+  </section>
+
 </div>
 
 <!--End Login box-->
