--- a/static/css/style.css
+++ b/static/css/style.css
@@ -594,8 +594,8 @@ transition:0.3s;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-.register label {
-    color: rgb(0, 0, 0);
+.main-form label {
+    color: rgb(245, 234, 234);
 }
 
 @media(max-width:1024px) {
