--- a/members_signup/templates/registration/edit_profile.html
+++ b/members_signup/templates/registration/edit_profile.html
@@ -6,7 +6,7 @@
 
 <div class ="edit-section">
     <div class="forms">
-        <div class="form-box">
+        <div class="form-box bg-dark text-white">
             <h1 class="page-title"> Edit Account</h1>
             <div class="mb-3">
                 <form method="POST">
