--- a/members_signup/templates/registration/login.html
+++ b/members_signup/templates/registration/login.html
@@ -4,21 +4,21 @@
 
 {% block content %}
 <!--notification for wrong input-->
-<div class="login-register-banner">
+<div class="login-register-main">
   <div class="login-register">
     {% if form.errors %}
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
-        There was an error with your form...Please try again
+        Wrong Credentials..Please try again!
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
   </div>
   {% endif %}
   
   <section class="vh-100 gradient-custom">
-    <div class="container-login py-5 h-100">
+    <div class="container-form py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-          <div class="card bg-dark text-white" style="border-radius: 1rem;">
+          <div class="card bg-dark text-white">
             <div class="card-login p-5 text-center">
               <form method="POST">
                 {% csrf_token %}
@@ -28,12 +28,12 @@
                   <p class="text-white-50 mb-5">Please enter your login and password!</p>
     
                   <div class="form-outline form-white mb-4">
-                    <input type="email" id="typeEmailX" class="form-control form-control-lg" />
+                    <input type="text" class="form-control" id="text" aria-describedby="text" name="username">
                     <label class="form-label" for="typeEmailX">Email</label>
                   </div>
     
                   <div class="form-outline form-white mb-4">
-                    <input type="password" id="typePasswordX" class="form-control form-control-lg" />
+                    <input type="password" class="form-control" id="exampleInputPassword1" name="password">
                     <label class="form-label" for="typePasswordX">Password</label>
                   </div>
                   <div class="btn-register">
@@ -41,12 +41,11 @@
                   </div>
     
                 </div>
-              </form>
                 <div>
                   <p class="mb-0">Don't have an account? <a href="{% url 'register' %}" class="text-white-50 fw-bold">Sign Up</a>
                   </p>
                 </div>
-  
+              </form>
             </div>
           </div>
         </div>
