--- a/members_signup/templates/registration/register.html
+++ b/members_signup/templates/registration/register.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="login-register-main">
-  <div class="login-register">
+  <div class="reg-form">
     {% if form.errors %}
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
         There was an error with your form...Please try again
@@ -38,7 +38,9 @@
         </div>
       </section>
    </div>
+   <br/>
+   <br/>
  </div>
 </div>
-<br>
+
 {% endblock %}
