--- a/world/templates/create_category.html
+++ b/world/templates/create_category.html
@@ -6,7 +6,7 @@
 {% if user.is_authenticated %}
 <div class="backgr-ct">
        <div class="forms-cat">
-              <div class="form-box-1">
+              <div class="card bg-dark text-white">
                      <h2 class="page-title"> New Blog Category</h2>
                      <div class="mb-3">
                             <form method="POST">
