--- a/members_signup/templates/registration/edit_profile.html
+++ b/members_signup/templates/registration/edit_profile.html
@@ -5,9 +5,9 @@
 
 
 <div class ="edit-section">
-    <div class="forms">
+    <div class="form-edit-acc">
         <div class="form-box bg-dark text-white">
-            <h1 class="page-title"> Edit Account</h1>
+            <h1 class="page-title"> Edit Profile Account</h1>
             <div class="mb-3">
                 <form method="POST">
                     {% csrf_token %}
