--- a/members_signup/templates/registration/login.html
+++ b/members_signup/templates/registration/login.html
@@ -11,48 +11,48 @@
         Wrong Credentials..Please try again!
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
-  </div>
-  {% endif %}
   
-  <section class="vh-100 gradient-custom">
-    <div class="container-form py-5 h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-          <div class="card bg-dark text-white">
-            <div class="card-login p-5 text-center">
-              <form method="POST">
-                {% csrf_token %}
-                <div class="mb-md-5 mt-md-4 pb-5">
-    
-                  <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-                  <p class="text-white-50 mb-5">Please enter your login and password!</p>
-    
-                  <div class="form-outline form-white mb-4">
-                    <input type="text" class="form-control" id="text" aria-describedby="text" name="username">
-                    <label class="form-label" for="typeEmailX">Email</label>
+    {% endif %}
+  
+    <section class="vh-100 gradient-custom">
+      <div class="container-form py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+            <div class="card bg-dark text-white">
+              <div class="card-login p-5 text-center">
+                <form method="POST">
+                  {% csrf_token %}
+                  <div class="mb-md-5 mt-md-4 pb-5">
+      
+                    <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
+                    <p class="text-white-50 mb-5">Please enter your login and password!</p>
+      
+                    <div class="form-outline form-white mb-4">
+                      <input type="text" class="form-control" id="text" aria-describedby="text" name="username">
+                      <label class="form-label" for="typeUsernameX">username</label>
+                    </div>
+      
+                    <div class="form-outline form-white mb-4">
+                      <input type="password" class="form-control" id="exampleInputPassword1" name="password">
+                      <label class="form-label" for="typePasswordX">Password</label>
+                    </div>
+                    <div class="btn-register">
+                      <button class="btn btn-secondary btn-submit">Login</button>
+                    </div>
+      
                   </div>
-    
-                  <div class="form-outline form-white mb-4">
-                    <input type="password" class="form-control" id="exampleInputPassword1" name="password">
-                    <label class="form-label" for="typePasswordX">Password</label>
+                  <div>
+                    <p class="mb-0">Don't have an account? <a href="{% url 'register' %}" class="text-white-50 fw-bold">Sign Up</a>
+                    </p>
                   </div>
-                  <div class="btn-register">
-                    <button class="btn btn-secondary btn-submit">Login</button>
-                  </div>
-    
-                </div>
-                <div>
-                  <p class="mb-0">Don't have an account? <a href="{% url 'register' %}" class="text-white-50 fw-bold">Sign Up</a>
-                  </p>
-                </div>
-              </form>
+                </form>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-
+    </section>
+  </div>
 </div>
 
 <!--End Login box-->
