--- a/world/templates/post.html
+++ b/world/templates/post.html
@@ -4,12 +4,13 @@
 {% block content %}
 
 {% if user.is_authenticated %}
+{% if user.profile.user %}
 
 <main class="flex-shrink-0 main-bg base">
        <div class="bact-img">
               <div class="form-post">
-                     <div class="container-post-box">
-                            <h1 class="page-title">Create your Post</h1>
+                     <div class="card bg-dark text-white">
+                            <h1 class="post-title">Create your Post</h1>
                             <div class="createpost">
                                    <div class="mb-3">
                                           <form method="POST" enctype="multipart/form-data">
@@ -25,19 +26,36 @@
                      </div>
               </div>
               <!---Function script to display restriction to Post Author-->
-                     <script>
-                            var name = "{{ user.id }}";
-                            document.getElementById("user").value = name;
-                     </script>
-              {% else %}
-              <div class="not-allowed">
-                     <div class="not-loggedin">
-                            <p><a href="{% url 'login' %}">Login Here</a></p>
+           <script>
+              var name = "{{ user.id }}";
+              document.getElementById("identifier").value = name;
+            </script>
+                 {% else %}
+                 <div class="not-allowed">
+                     <div class="not-allowed-box">
+                       <div class="not-loggedin">
+                         <p>Please, create a profile first.</p>
+                         <p><a href="{% url 'create_profile_page' %}">Create profile</a></p>
+                       </div>
                      </div>
-              
-              </div>
-       <div>
-       
+                 </div>
+                 {% endif %}
+                 {% else %}
+             
+                 <!-- If the user ended up in this page without being logged in, a message will be displayed -->
+                 <div class="not-allowed">
+                     <div class="not-allowed-box">
+                            <div class="not-loggedin">
+                                   <p>Login first to be able to add a post</p>
+                                   <p><a href="{% url 'login' %}">Login Here</a></p>
+                            </div>
+                     </div>
+                 </div>
+       </div>
 </main>
 {% endif %}
+             
+             
 {% endblock %}
+
+       
