add screenshot from the UX in readme

--- a/members_signup/templates/registration/change_password.html
+++ b/members_signup/templates/registration/change_password.html
@@ -3,17 +3,16 @@
 
 {% block content %}
 
-<br/><br/>
-<div class="password-bck">
-    <div class="forms-1">
-        <div class="form-box-2">
+<div class ="edit-section">
+    <div class="form-edit-acc">
+        <div class="form-box bg-dark text-white">
             <h1 class="page-title"> Change Password</h1>
             <div class="mb-3">
                 <form method="POST">
                     {% csrf_token %}
                     {{ form.as_p }}
                     <div class="form-btn">
-                        <button class="btn btn-secondary">Change Password</button>
+                        <button class="btn btn-edit">Update Password</button>
                     </div>
                 </form>
             </div>
