--- a/world/templates/comments_box.html
+++ b/world/templates/comments_box.html
@@ -5,7 +5,7 @@
 <div class="comment-bgd">
 {% if user.is_authenticated %}
  <div class="forms">
-       <div class="form-box">
+       <div class="form-box-section">
               <h1 class="comment-title"> Comment section </h1>
               <br /><br />
               <div class="mb-3">
