--- a/world/templates/comments_box.html
+++ b/world/templates/comments_box.html
@@ -22,8 +22,8 @@
        </div>
     {% else %}
     <!-- If the user ended up in this page without being logged in, a message will be displayed -->
-    <div class="not-allow">
-        <div class="not-allow-box">
+    <div class="not-allowed">
+        <div class="not-loggedin">
             <p>You must be <a href="{% url 'login' %}">logged in</a> to post a comment.</p>
         </div>
     </div>
