--- a/world/templates/create_category.html
+++ b/world/templates/create_category.html
@@ -6,28 +6,27 @@
 {% if user.is_authenticated %}
 <div class="backgr-ct">
        <div class="forms-cat">
-              <div class="card bg-dark text-white">
-                     <h2 class="page-title"> New Blog Category</h2>
-                     <div class="mb-3">
-                            <form method="POST">
-                                   {% csrf_token %}
-                                   {{ form.as_p }}
-                                   <div class="form-btn">
-                                          <button class="btn-category">Post</button>
-                                   </div>
-                            </form>
-                     </div>
-              </div>
-       </div>
-
-       {% else %}
-       <div class="not-allowed">
-              <div class="not-loggedin">
-                     <p>Please register now or Login</p>
-              </div>
-
+           <div class="category-add">
+               <h2 class="page-title">New Category</h2>
+               <div class="form-group form-categories">
+                   <form method="POST">
+                       {% csrf_token %}
+                       {{ form.as_p }}
+                       <div class="btn-cat">
+                           <button type="submit" class="btn-category">Submit</button>
+                       </div>
+                   </form>
+               </div>
+           </div>
+               {% else %}
+               <!-- If the user ends up on this page without being logged in, a message will be displayed -->
+               <div class="not-allowed">
+                   <div class="not-loggedin">
+                       <p>You need to login to be able to add a category</p>
+                       <p><a href="{% url 'login' %}">Login Here</a></p>
+                   </div>
+               </div>
+               {% endif %}
        </div>
 </div>
- {% endif %}
-
 {% endblock %}
